# wingpanel

./: meson.build
data/styles/: application.css
src/: meson.build
src/Services/: IndicatorSorter.vala
src/Widgets/: Panel.vala
subprojects/na-tray/: meson.build
subprojects/na-tray/lib/: meson.build  na-grid.c
vapi/: gtk_x11tray.vapi
